# uwu-notify

./: Cargo.toml  README.md
src/: main.rs  paint.rs  wayland.rs  window.rs
