[package]
name = "uwu-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
egui = "0.22.0"
egui-winit = "0.22.0"
egui_glow = { version = "0.22.0", features = ["winit", "clipboard", "links"] }
glow = "0.12.2"
glutin = "0.30.9"
raw-window-handle = "0.5.2"
smithay-client-toolkit = "0.17.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-tree = "0.2.4"
wayland-backend = { version = "0.1.2", features = ["client_system"] }
winit = "0.28.6"
zbus = "3.14.1"
